--- a/templates/default/css/style.css
+++ b/templates/default/css/style.css
@@ -4,7 +4,7 @@
 
 .header {
 	border:1px solid blue;
-	background-color : green;
+	background-color : blue;
 	color:white;
 	font-weight: bold;
 	font-size: 35px;
